--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculateur d'Impôts 2024</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Assurez-vous que ce fichier existe ou retirez cette ligne si non utilisé -->
 </head>
 <body>
     <div class="container">
@@ -16,11 +16,17 @@
             <label for="parts">Nombre de parts fiscales :</label>
             <input type="number" id="parts" name="parts" required min="1" step="0.1" value="1" placeholder="Entrez le nombre de parts">
 
+            <label for="status">Statut :</label>
+            <select id="status" name="status" required>
+                <option value="cadre">Cadre</option>
+                <option value="non-cadre">Non-Cadre</option>
+            </select>
+
             <button type="submit">Calculer</button>
         </form>
-        <div id="result"></div>
+        <div id="result" style="display: none;"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Assurez-vous que ce fichier existe et est correctement lié -->
 </body>
 </html>
