--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculateur d'Impôts 2024</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Assurez-vous que ce fichier existe ou retirez cette ligne si non utilisé -->
+    <link rel="stylesheet" href="styles.css"> <!-- Optionnel -->
 </head>
 <body>
     <div class="container">
