--- a/index.html
+++ b/index.html
@@ -82,112 +82,12 @@
 
             <button type="submit">Calculer</button>
         </form>
-        <div id="result" style="display: none;"></div>
     </div>
+    
+    <!-- Div pour afficher les résultats, placé en dehors du formulaire -->
+    <div id="result" style="display: none; max-width: 500px; margin: 20px auto; background-color: #fff; padding: 20px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"></div>
 
-    <script>
-        document.getElementById('tax-form').addEventListener('submit', function(e) {
-            e.preventDefault(); // Empêche le rechargement de la page
-
-            console.log("Formulaire soumis");
-
-            // Récupérer les valeurs du formulaire
-            const grossSalaryInput = document.getElementById('gross-salary');
-            const monthsWorkedInput = document.getElementById('months-worked');
-            const partsInput = document.getElementById('parts');
-            const statusInput = document.getElementById('status');
-
-            const grossSalaryAnnual = parseFloat(grossSalaryInput.value);
-            const monthsWorked = parseInt(monthsWorkedInput.value);
-            const parts = parseFloat(partsInput.value);
-            const status = statusInput.value;
-
-            console.log(`Salaire Brut Annuel Entré : ${grossSalaryAnnual} €`);
-            console.log(`Nombre de Mois Travaillés : ${monthsWorked}`);
-            console.log(`Nombre de Parts : ${parts}`);
-            console.log(`Statut Sélectionné : ${status}`);
-
-            // Validation des entrées
-            if (isNaN(grossSalaryAnnual) || isNaN(monthsWorked) || isNaN(parts) || monthsWorked < 1 || monthsWorked > 12 || parts <= 0) {
-                alert("Veuillez entrer des valeurs valides.");
-                console.log("Entrées invalides");
-                return;
-            }
-
-            // Calcul du salaire brut proportionnel au nombre de mois travaillés
-            const grossSalary = (grossSalaryAnnual / 12) * monthsWorked;
-            console.log(`Salaire Brut Proportionnel : ${grossSalary.toFixed(2)} €`);
-
-            // Définir le taux de cotisations sociales en fonction du statut
-            const cotisationRate = (status === 'cadre') ? 0.19 : 0.23; // 19% pour les cadres, 23% pour les non-cadres
-            console.log(`Taux de Cotisations Sociales : ${(cotisationRate * 100).toFixed(2)}%`);
-
-            // Calcul du salaire net avant impôt
-            const netBeforeTax = calculateNetBeforeTax(grossSalary, cotisationRate);
-            console.log(`Salaire Net Avant Impôt: ${netBeforeTax.toFixed(2)} €`);
-
-            // Calcul du revenu imposable
-            const taxableIncome = calculateTaxableIncome(netBeforeTax);
-            console.log(`Revenu Imposable: ${taxableIncome.toFixed(2)} €`);
-
-            // Calcul du quotient familial
-            const quotientFamilial = taxableIncome / parts;
-            console.log(`Quotient Familial: ${quotientFamilial.toFixed(2)} €`);
-
-            // Calcul de l'impôt sur le revenu
-            const taxPerPart = calculateTax(quotientFamilial);
-            console.log(`Impôt par Part : ${taxPerPart.toFixed(2)} €`);
-
-            const totalTax = taxPerPart * parts;
-            console.log(`Impôt Total: ${totalTax.toFixed(2)} €`);
-
-            // Afficher les détails du calcul
-            const resultDiv = document.getElementById('result');
-            resultDiv.style.display = 'block';
-            resultDiv.innerHTML = `
-                <p><strong>Salaire Brut Annuel Entré :</strong> ${grossSalaryAnnual.toFixed(2)} €</p>
-                <p><strong>Nombre de Mois Travaillés :</strong> ${monthsWorked} mois</p>
-                <p><strong>Salaire Brut Proportionnel :</strong> ${grossSalary.toFixed(2)} €</p>
-                <p><strong>Statut :</strong> ${status === 'cadre' ? 'Cadre' : 'Non-Cadre'}</p>
-                <p><strong>Salaire Net Avant Impôt :</strong> ${netBeforeTax.toFixed(2)} €</p>
-                <p><strong>Revenu Imposable :</strong> ${taxableIncome.toFixed(2)} €</p>
-                <p><strong>Quotient Familial :</strong> ${quotientFamilial.toFixed(2)} €</p>
-                <p><strong>Impôt Estimé :</strong> ${totalTax.toFixed(2)} €</p>
-            `;
-        });
-
-        /**
-         * Calcule le salaire net avant impôt en déduisant les cotisations sociales.
-         * @param {number} grossSalary - Salaire brut en euros.
-         * @param {number} cotisationRate - Taux de cotisations sociales (0.19 pour cadres, 0.23 pour non-cadres).
-         * @returns {number} - Salaire net avant impôt.
-         */
-        function calculateNetBeforeTax(grossSalary, cotisationRate) {
-            const cotisations = grossSalary * cotisationRate;
-            return grossSalary - cotisations;
-        }
-
-        /**
-         * Calcule le revenu imposable en appliquant un abattement forfaitaire de 10%.
-         * @param {number} netBeforeTax - Salaire net avant impôt.
-         * @returns {number} - Revenu imposable.
-         */
-        function calculateTaxableIncome(netBeforeTax) {
-            const abattement = netBeforeTax * 0.10;
-            return netBeforeTax - abattement;
-        }
-
-        /**
-         * Calcule l'impôt sur le revenu en fonction du quotient familial.
-         * @param {number} quotientFamilial - Revenu imposable par part fiscale.
-         * @returns {number} - Impôt dû par part fiscale.
-         */
-        function calculateTax(quotientFamilial) {
-            let tax = 0;
-
-            // Tranches d'imposition pour 2024 (à vérifier et ajuster selon les taux officiels)
-            const brackets = [
-                { limit: 10777, rate: 0 },
-                { limit: 27478, rate: 11 },
-                { limit: 78570, rate: 30 },
-                {​⬤
+    <!-- Inclusion du script JavaScript à la fin du body -->
+    <script src="script.js"></script>
+</body>
+</html>
